--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,6 +9,8 @@ web_hook:
   # http://<你的服务器IP>:端口/接收地址
   # 建议将地址设置得尽量复杂，并且套 Cloudflare Tunnel，不要与服务器共用同一个二级域名
   path: /api/afdian/hook
+  # 是否忽略执行所有提交上来的订单，用于测试 webhook 是否工作正常
+  ignore-all: true
 # 在 POLLING_API 模式（轮询API）下的配置
 polling_api:
   # 多少秒轮询一次爱发电订单列表API
