--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ main: top.mrxiaom.sweet.afdian.SweetAfdian
 api-version: 1.13
 softdepend: [ PlaceholderAPI ]
 authors: [ MrXiaoM ]
+folia-supported: true
 commands:
   sweetafdian:
     description: 'The main command of SweetAfdian'
