--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -28,8 +28,8 @@ polling_api:
 
 player-name:
   # 订单备注去除首尾空格后，完全匹配这个正则表达式，才执行相应操作
-  # 中文名：‘[a-zA-Z0-9_\u4e00-\u9fa5]*'
-  # 英文名：‘[a-zA-Z0-9_]*'
+  # 中文名：'[a-zA-Z0-9_\u4e00-\u9fa5]*'
+  # 英文名：'[a-zA-Z0-9_]*'
   pattern: '[a-zA-Z0-9_]*'
   # 最小长度
   min-length: 3
